# rustzeighty

./: .gitignore  Cargo.toml  Readme.md  dumpobj.cmd
.cargo/: config.toml
apps/rustzeighty/: Cargo.toml
apps/rustzeighty/src/: main.rs  peripherals.rs  stdio_channel.rs  telnet.rs
apps/rustzeighty/src/peripherals/: file_block_device.rs  iochannel.rs
apps/rustzeighty_rp/: Cargo.toml
apps/rustzeighty_rp/src/: dump.rs  main.rs  peripherals.rs
apps/rustzeighty_rp/src/peripherals/: rom_block_device.rs  sd_spi.rs  spi_interface.rs  sw_spi.rs
apps/sdmmc_rp/: Cargo.toml
apps/sdmmc_rp/src/: main.rs
asm/: .gitignore
asm/apps/: Makefile  tiny_basic.asm  z80_uart_monitor.asm
asm/cpm22/: Makefile  cpm22.asm  cpm_all.asm
asm/firmware/: Makefile  firmware.asm
asm/lib/: dbg_trace.asm  hexdump.asm  io.asm  memory.asm  puts.asm  sdcard.asm
asm/tests/: Makefile  asm_zmac.bat  emb.asm  prelim.z80  sio_echo.asm  sio_hello.asm  zexdoc.z80
bak/: build.cmd  dumpobj.cmd
filesystem/: .gitignore  Makefile  README.md  diskdefs
lib/rz80/: Cargo.toml
lib/rz80/src/: cpu.rs  ctc.rs  daisychain.rs  lib.rs  memory.rs  pio.rs  registers.rs
lib/rz80/tests/: test_opcodes.rs  test_zex.rs
lib/z80_sys/: Cargo.toml
lib/z80_sys/src/: lib.rs  ringbuffer.rs
src/: dump.rs  flashstore.rs  main copy.rs  main.rs  ring_buffer.rs
src/rustzeighty_rp2040/: dump.rs  main.rs  peripherals.rs
src/rz80/: bus.rs  cpu.rs
