[package]
name = "sdmmc_rp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7" }
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12"
embedded-graphics = "0.7.1"
alloc-cortex-m = "0.4"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
#embedded-sdmmc = "0.3.0"
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git", rev = "db58253bb326d20e177c733ebc0b051ef0dcee0f" }
fugit = "0.3.6"
panic-halt = "0.2.0"
arrayvec = { version = "0.7.1", default-features = false }

defmt = "0.3.0"
defmt-rtt = "0.3.0"

# We're using a Pico by default on this template
rp-pico = "0.5"
# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.3"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.5", features=["rt"] }
# rp2040-boot2 = "0.2"
nb = "1.0.0"

[[bin]]
name = "sdmmc_rp"
path = "src/main.rs"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = false
lto = 'fat'

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 3
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 3
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
